--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "jest": {
     "collectCoverageFrom": [
       "<rootDir>/src/components/**/*.{js,jsx}",
+      "<rootDir>/src/providers/**/*.{js,jsx}",
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
@@ -10,11 +11,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/jest": "^11.3.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "axios": "^0.21.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
